--- a/Note/1. 웹팩 시작하기.md
+++ b/Note/1. 웹팩 시작하기.md
@@ -126,6 +126,7 @@ module.exports = {
 ```
 
 - Path 모듈은 Node.js에서 제공하는 경로 모듈이다. `require('path')`로 가져와 사용한다.
+  > 참고 링크: [Path API](https://nodejs.org/api/path.html)
 - `__filename`과 `__dirname`을 통해 현재 파일명과 파일경로를 가져올 수 있어, "src/style/main/layout...아 뭐였지." 하는 상황을 줄일 수 있을 것 같다 (*ﾟﾛﾟ)
 - `path.resolve([from ...], to)`는 `to`를 절대 경로로 변환해 준다. `to`가 절대 경로가 아니라면 절대 경로를 찾을 때까지 `from`의 arguments를 이어붙인다. 이 과정에서 `/`를 만나면 절대 경로로 인식해 앞의 경로를 무시한다. `from`을 사용해도 절대 경로를 찾지 못한다면 현재 디렉토리를 사용한다.
   - ex) `path.resolve('/a', '/b', 'c')` ==> 결과값: /b/c
